--- a/Planilla/app.config
+++ b/Planilla/app.config
@@ -14,6 +14,9 @@
         <add name="Planilla.My.MySettings.planillaConnectionString2"
             connectionString="Data Source=servidor-bd;Initial Catalog=planilla;Persist Security Info=True;User ID=sa;Password=123"
             providerName="System.Data.SqlClient" />
+        <add name="Planilla.My.MySettings.planillaConnectionString3"
+            connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=planilla;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <system.diagnostics>
         <sources>
@@ -45,4 +48,8 @@
             </setting>
         </Planilla.My.MySettings>
     </userSettings>
+
+  <appSettings>
+    <add key="EnableWindowsFormsHighDpiAutoResizing" value="true" />
+  </appSettings>
 </configuration>
